[SECURITY-930]