@@ -21,6 +21,30 @@
  */
 package hudson.plugins.sitemonitor;
 
+import java.io.IOException;
+import java.net.CookieHandler;
+import java.net.CookieManager;
+import java.net.HttpURLConnection;
+import java.net.MalformedURLException;
+import java.net.SocketTimeoutException;
+import java.net.URL;
+import java.security.KeyManagementException;
+import java.security.NoSuchAlgorithmException;
+import java.security.SecureRandom;
+import java.security.cert.CertificateException;
+import java.security.cert.X509Certificate;
+import java.util.ArrayList;
+import java.util.Base64;
+import java.util.List;
+
+import javax.net.ssl.HostnameVerifier;
+import javax.net.ssl.HttpsURLConnection;
+import javax.net.ssl.KeyManager;
+import javax.net.ssl.SSLContext;
+import javax.net.ssl.SSLSession;
+import javax.net.ssl.TrustManager;
+import javax.net.ssl.X509TrustManager;
+
 import hudson.EnvVars;
 import hudson.Launcher;
 import hudson.ProxyConfiguration;
@@ -31,24 +55,6 @@ import hudson.plugins.sitemonitor.model.Site;
 import hudson.plugins.sitemonitor.model.Status;
 import hudson.tasks.BuildStepMonitor;
 import hudson.tasks.Recorder;
-
-import java.io.IOException;
-import java.net.*;
-import java.security.KeyManagementException;
-import java.security.NoSuchAlgorithmException;
-import java.security.SecureRandom;
-import java.security.cert.CertificateException;
-import java.security.cert.X509Certificate;
-import javax.net.ssl.HostnameVerifier;
-import javax.net.ssl.HttpsURLConnection;
-import javax.net.ssl.KeyManager;
-import javax.net.ssl.SSLContext;
-import javax.net.ssl.SSLSession;
-import javax.net.ssl.TrustManager;
-import javax.net.ssl.X509TrustManager;
-import java.util.ArrayList;
-import java.util.List;
-import org.apache.commons.codec.binary.Base64;
 
 /**
  * Performs the web site monitoring process.
@@ -98,21 +104,27 @@ public class SiteMonitorRecorder extends Recorder {
         }
     }
 
-    private HttpURLConnection getConnection(String urlString) throws MalformedURLException, IOException,
+    private HttpURLConnection getConnection(String urlString, boolean admitInsecureSslCerts) throws MalformedURLException, IOException,
             NoSuchAlgorithmException, KeyManagementException {
 
         if (urlString.startsWith("https://")) {
-            SSLContext ctx = SSLContext.getInstance("TLS");
-            ctx.init(new KeyManager[0], new TrustManager[] { new DefaultTrustManager() }, new SecureRandom());
-            SSLContext.setDefault(ctx);
-
+            
             HttpsURLConnection connection = (HttpsURLConnection) ProxyConfiguration.open(new URL(urlString));
-            connection.setHostnameVerifier(new HostnameVerifier() {
+            
+            // If insecure connections are allowed, set SSL factory only for this connection 
+            if (admitInsecureSslCerts) {
+                SSLContext ctx = SSLContext.getInstance("TLS");
+                ctx.init(new KeyManager[0], new TrustManager[] { new DefaultTrustManager() }, new SecureRandom());
+                
+                connection.setSSLSocketFactory(ctx.getSocketFactory());
+                connection.setHostnameVerifier(new HostnameVerifier() {
 
-                public boolean verify(String arg0, SSLSession arg1) {
-                    return true;
-                }
-            });
+                    public boolean verify(String arg0, SSLSession arg1) {
+                        return true;
+                    }
+                });
+            }
+            
             return connection;
 
         } else if (urlString.contains("@")) {
@@ -122,10 +134,10 @@ public class SiteMonitorRecorder extends Recorder {
             String userName = creds.substring(0, creds.indexOf(":"));
             String passWord = creds.substring(creds.indexOf(":") + 1, creds.length());
             String userPassword = userName + ":" + passWord;
-            // TODO cambiar implementación de Base64
-            String encoding = new sun.misc.BASE64Encoder().encode(userPassword.getBytes());
-            // TODO soporta proxy?
-            HttpURLConnection connection = (HttpURLConnection) passedURL.openConnection();
+            
+            String encoding = Base64.getEncoder().encodeToString(userPassword.getBytes("utf-8"));
+            HttpURLConnection connection = (HttpURLConnection) ProxyConfiguration.open(passedURL);
+            
             connection.setRequestProperty("Authorization", "Basic " + encoding);
             return connection;
 
@@ -171,7 +183,7 @@ public class SiteMonitorRecorder extends Recorder {
             url = env.expand(url);
             
             try {
-                connection = getConnection(url);
+                connection = getConnection(url, site.getAdmitInsecureSslCerts());
                 
                 if (site.getTimeout() != null) {
                     connection.setConnectTimeout(site.getTimeout() * MILLISECS_IN_SECS);
